<resources>
    <string name="app_name">Controle Financeiro</string>
    <string name="titulo_activity_conta">Contas</string>
    <string name="adicionar">Adicionar</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="titulo_activity_adicionar_conta">Adicionar uma nova Conta</string>
    <string name="nome">Nome:</string>
    <string name="descricao">Descrição:</string>
    <string name="saldo_inicial">Saldo Inicial:</string>
    <string name="saldo_0">0.00</string>
    <string name="editar_conta">Editar conta</string>
    <string name="transacoes">Transações</string>
    <string name="valor">Valor</string>
    <string name="natureza">Natureza:</string>
    <string name="tipo">Tipo:</string>
    <string name="conta">Conta:</string>
    <string name="data">Data:</string>
    <string name="repete">Repete?</string>
    <string name="dias">dias</string>
    <string name="relatorios">Relatórios</string>
    <string name="periodo_invalido">Período inserido inválido, tente novamente…</string>
    <string name="nenhuma_conta">Não há nenhuma conta cadastrada, não é possível gerar relatórios…</string>
    <string name="por_conta">Por Conta:</string>
    <string name="periodo">Período:</string>
    <string name="ate">até</string>
    <string name="por_natureza">Por Natureza:</string>
    <string name="gerar_relatorio">Gerar Relatório</string>
    <string name="por_tipo">Por Tipo:</string>
    <string name="a_cada">a cada</string>
    <string name="saldo_total_0_00">Saldo Total: R$ 0.00</string>
    <string name="minhas_contas">Minhas Contas</string>
    <string name="creditos_debitos">Créditos/Débitos</string>
    <string name="extratos">Extratos</string>
    <string-array name="natureza">
        <item>Alimentação</item>
        <item>Saúde</item>
        <item>Transporte</item>
        <item>Moradia</item>
        <item>Educação</item>
        <item>Lazer</item>
        <item>Impostos</item>
        <item>Contas</item>
    </string-array>
    <string-array name="tipo">
        <item>Crédito</item>
        <item>Débito</item>
    </string-array>
</resources>
