<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/valorCadastroTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:labelFor="@id/valorTransacaoET"
            android:text="@string/valor"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/valorTransacaoET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="numberDecimal"
            android:labelFor="@+id/nomeTV"
            android:text="@string/saldo_0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/descricaoTransacaoTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:labelFor="@id/descricaoTransacaoET"
            android:text="@string/descricao"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/descricaoTransacaoET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:inputType="text"
            android:labelFor="@+id/descricaoTransacaoTV"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/naturezaTransacaoTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/natureza"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spinnerNatureza"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:entries="@array/natureza" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tipoTransacaoTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/tipo"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spinnerTipo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:entries="@array/tipo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/contaTransacaoTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/conta"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spinnerConta"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dataTransacaoTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:labelFor="@id/dataTransacaoET"
            android:text="@string/data"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/dataTransacaoET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:clickable="true"
            android:editable="false"
            android:focusable="true"
            android:inputType="none"
            android:onClick="verificarDataTransacao"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5" />

        <TextView
            android:id="@+id/periodoTransacaoTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2.5"
            android:labelFor="@id/periodoTransacaoET"
            android:text="@string/repete"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/periodoTransacaoET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:inputType="date" />

        <TextView
            android:id="@+id/diasTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/dias"
            android:textAlignment="center"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>